--- a/services.html
+++ b/services.html
@@ -1,53 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <title>Our Services | Shwet Shiva Printing</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- SEO -->
+<title>Printing Services | Designing, Offset & Digital Printing</title>
+<meta name="description" content="We offer professional printing services including graphic design, digital & offset printing, packaging, labels, and bulk printing solutions. High-quality, fast delivery, and affordable rates.">
+<meta name="keywords" content="printing services, digital printing, offset printing, graphic design, bulk printing, packaging printing, labels printing">
+<link rel="canonical" href="https://www.shwetshivaprinting.com/services">
+
+<!-- OG -->
+<meta property="og:title" content="Printing Services | Designing, Offset & Digital Printing">
+<meta property="og:description" content="Professional printing services including digital & offset printing, graphic design, packaging, and bulk orders.">
+<meta property="og:image" content="https://picsum.photos/1200/630?random=70">
+
+<!-- Tailwind -->
+<script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Animations -->
+<style>
+    .fade-in { animation: fadeIn 1.2s ease-in-out; }
+    @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+    .slide-up { animation: slideUp 0.9s ease-out; }
+    @keyframes slideUp { from { transform:translateY(20px); opacity:0; }
+                         to { transform:translateY(0); opacity:1; } }
+
+    .zoom-hover:hover {
+        transform: scale(1.04);
+        transition: 0.35s ease;
+    }
+
+    .soft-hover:hover {
+        box-shadow: 0 20px 40px rgba(0,0,0,0.12);
+        transition: 0.3s ease;
+    }
+</style>
 </head>
 
 <body class="bg-gray-50">
 
-<!-- NAVIGATION -->
+<!-- ===================================================
+ NAVIGATION (same as other pages)
+==================================================== -->
+<header class="sticky top-0 bg-white shadow z-50">
+    <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
 
-<!-- HERO -->
-<section class="bg-blue-800 text-white py-24 text-center">
-    <h2 class="text-4xl font-bold">Professional Printing Services</h2>
-    <p class="text-blue-200 mt-3">Design | Printing | Finishing | Bulk Orders</p>
+        <!-- Logo -->
+        <a href="index.html" class="flex items-center space-x-3">
+            <div class="w-12 h-12 bg-blue-600 rounded-full flex items-center justify-center text-white text-xl font-bold">
+                SS
+            </div>
+            <div>
+                <h1 class="text-2xl font-bold">Shwet Shiva</h1>
+                <p class="text-sm text-gray-600 -mt-1">Printing Services</p>
+            </div>
+        </a>
+
+        <!-- Desktop Menu -->
+        <div class="hidden md:flex space-x-8 font-semibold">
+            <a href="index.html" class="hover:text-blue-600">Home</a>
+            <div class="relative group cursor-pointer">
+                <span class="text-blue-600">Products</span>
+                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-48 p-3 space-y-2">
+                    <a href="business-cards.html" class="block hover:text-blue-600">Business Cards</a>
+                    <a href="brochures.html" class="block hover:text-blue-600">Brochures</a>
+                    <a href="banners.html" class="block hover:text-blue-600">Banners</a>
+                    <a href="packaging.html" class="block hover:text-blue-600">Packaging</a>
+                    <a href="labels.html" class="block hover:text-blue-600">Labels</a>
+                </div>
+            </div>
+            <a href="services.html" class="hover:text-blue-600 font-semibold">Services</a>
+            <div class="relative group cursor-pointer">
+                <span class="hover:text-blue-600">Company</span>
+                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-40 p-3 space-y-2">
+                    <a href="about.html" class="block hover:text-blue-600">About Us</a>
+                    <a href="contact.html" class="block hover:text-blue-600">Contact</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Mobile Menu -->
+        <button id="mobileBtn" class="md:hidden text-3xl">&#9776;</button>
+    </nav>
+
+    <div id="mobileMenu" class="hidden md:hidden bg-white shadow px-4 pb-4">
+        <a href="index.html" class="block py-2">Home</a>
+
+        <details class="py-2">
+            <summary class="cursor-pointer font-medium text-blue-600">Products</summary>
+            <div class="pl-4 space-y-1">
+                <a href="business-cards.html">Business Cards</a>
+                <a href="brochures.html">Brochures</a>
+                <a href="banners.html">Banners</a>
+                <a href="packaging.html">Packaging</a>
+                <a href="labels.html">Labels</a>
+            </div>
+        </details>
+
+        <a href="services.html" class="block py-2 font-semibold text-blue-600">Services</a>
+
+        <details class="py-2">
+            <summary class="cursor-pointer font-medium">Company</summary>
+            <div class="pl-4 space-y-1">
+                <a href="about.html">About Us</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </details>
+    </div>
+</header>
+
+<script>
+document.getElementById("mobileBtn").onclick = () => {
+    document.getElementById("mobileMenu").classList.toggle("hidden");
+};
+</script>
+
+<!-- ===================================================
+ HERO
+==================================================== -->
+<section class="relative fade-in">
+    <img src="https://picsum.photos/1920/550?random=71"
+         class="w-full h-[420px] object-cover brightness-75">
+    <div class="absolute top-0 left-0 w-full h-full flex flex-col justify-center items-center text-white text-center px-6">
+        <h2 class="text-5xl font-extrabold drop-shadow-lg slide-up">Our Printing Services</h2>
+        <p class="mt-4 text-lg max-w-2xl slide-up">
+            Complete solutions from graphic design, digital & offset printing, to packaging & labels.
+        </p>
+    </div>
 </section>
 
-<!-- SERVICE CARDS -->
-<section class="container mx-auto px-4 py-16">
-    <h3 class="text-3xl font-bold mb-10">What We Offer</h3>
+<!-- ===================================================
+ SERVICE CARDS
+==================================================== -->
+<section class="container mx-auto px-6 py-16">
+    <h3 class="text-3xl font-bold fade-in text-center">What We Offer</h3>
+    <p class="text-center text-gray-600 mt-3 mb-10 fade-in">
+        Professional services tailored to meet your business branding and marketing needs.
+    </p>
 
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+    <div class="grid md:grid-cols-3 gap-10">
 
-        <div class="p-6 bg-white shadow rounded-lg hover:-translate-y-1 transition">
-            <i class="fas fa-pencil-ruler text-4xl text-blue-700"></i>
-            <h4 class="text-xl font-bold mt-4">Graphic Design</h4>
-            <p class="text-gray-600 mt-2">Custom designs for all printing needs.</p>
+        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up cursor-pointer">
+            <img src="https://picsum.photos/400/260?random=72" class="rounded-lg mb-4 zoom-hover">
+            <h4 class="text-xl font-semibold">Graphic Design</h4>
+            <p class="text-gray-600 mt-2">Custom layouts, brochures, logos, and marketing material designs.</p>
         </div>
 
-        <div class="p-6 bg-white shadow rounded-lg hover:-translate-y-1 transition">
-            <i class="fas fa-print text-4xl text-blue-700"></i>
-            <h4 class="text-xl font-bold mt-4">Digital & Offset Printing</h4>
-            <p class="text-gray-600 mt-2">High-quality printing with fast turnaround.</p>
+        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up cursor-pointer">
+            <img src="https://picsum.photos/400/260?random=73" class="rounded-lg mb-4 zoom-hover">
+            <h4 class="text-xl font-semibold">Digital & Offset Printing</h4>
+            <p class="text-gray-600 mt-2">High-quality printing on paper, boards, and specialty materials.</p>
         </div>
 
-        <div class="p-6 bg-white shadow rounded-lg hover:-translate-y-1 transition">
-            <i class="fas fa-box-open text-4xl text-blue-700"></i>
-            <h4 class="text-xl font-bold mt-4">Packaging & Branding</h4>
-            <p class="text-gray-600 mt-2">Brand packaging, labels, and custom boxes.</p>
+        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up cursor-pointer">
+            <img src="https://picsum.photos/400/260?random=74" class="rounded-lg mb-4 zoom-hover">
+            <h4 class="text-xl font-semibold">Packaging & Labels</h4>
+            <p class="text-gray-600 mt-2">Custom packaging, labels, and branded materials for your products.</p>
         </div>
 
     </div>
 </section>
 
-<!-- CTA -->
-<section class="bg-gray-900 py-16 text-center text-white">
-    <h3 class="text-3xl font-bold">Need a Custom Service?</h3>
-    <a href="contact.html" class="inline-block mt-4 px-12 py-4 bg-blue-700 rounded-lg">Contact Us</a>
+<!-- ===================================================
+ CTA
+==================================================== -->
+<section class="bg-blue-600 text-white py-14 text-center slide-up">
+    <h3 class="text-3xl font-bold">Need Custom Printing Services?</h3>
+    <p class="mt-3 text-lg">Get a quote for design, printing, and bulk orders today!</p>
+    <a href="contact.html"
+       class="mt-6 inline-block bg-white text-blue-700 px-8 py-3 rounded-lg font-bold shadow-md hover:bg-gray-200">
+       Contact Us
+    </a>
 </section>
+
+<!-- ===================================================
+ FOOTER
+==================================================== -->
+<footer class="bg-gray-900 text-gray-300 py-10">
+    <div class="container mx-auto px-6 grid md:grid-cols-3 gap-10">
+
+        <div>
+            <h4 class="text-xl font-bold mb-3">Shwet Shiva Printing</h4>
+            <p>Premium printing services with fast delivery & top quality.</p>
+        </div>
+
+        <div>
+            <h4 class="text-xl font-bold mb-3">Products</h4>
+            <ul class="space-y-1">
+                <li><a href="business-cards.html" class="hover:text-white">Business Cards</a></li>
+                <li><a href="brochures.html" class="hover:text-white">Brochures</a></li>
+                <li><a href="banners.html" class="hover:text-white">Banners</a></li>
+                <li><a href="packaging.html" class="hover:text-white">Packaging</a></li>
+                <li><a href="labels.html" class="hover:text-white">Labels</a></li>
+            </ul>
+        </div>
+
+        <div>
+            <h4 class="text-xl font-bold mb-3">Contact</h4>
+            <p>Email: support@shwetshivaprinting.com</p>
+            <p>Phone: +91 98765 43210</p>
+        </div>
+
+    </div>
+</footer>
 
 </body>
 </html>
