--- a/contact.html
+++ b/contact.html
@@ -1,48 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <title>Contact Us | Shwet Shiva Printing</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- SEO -->
+<title>Contact Us | Shwet Shiva Printing Services</title>
+<meta name="description" content="Contact Shwet Shiva Printing for custom printing orders, inquiries, and quotations. Fast response and professional customer support.">
+<meta name="keywords" content="contact printing company, printing help, printing quotation, customer support, print inquiry">
+<link rel="canonical" href="https://www.shwetshivaprinting.com/contact">
+
+<!-- OG -->
+<meta property="og:title" content="Contact Us | Shwet Shiva Printing Services">
+<meta property="og:description" content="Get in touch with Shwet Shiva Printing for quotes, custom orders, and printing inquiries.">
+<meta property="og:image" content="https://picsum.photos/1200/630?random=90">
+
+<!-- Tailwind -->
+<script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Animations -->
+<style>
+    .fade-in { animation: fadeIn 1.2s ease-in-out; }
+    @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+    .slide-up { animation: slideUp 0.9s ease-out; }
+    @keyframes slideUp { from { transform:translateY(20px); opacity:0; }
+                         to { transform:translateY(0); opacity:1; } }
+
+    .zoom-hover:hover {
+        transform: scale(1.03);
+        transition: 0.35s ease;
+    }
+
+    .soft-hover:hover {
+        box-shadow: 0 20px 40px rgba(0,0,0,0.12);
+        transition: 0.3s ease;
+    }
+</style>
 </head>
 
 <body class="bg-gray-50">
 
-<!-- NAVIGATION -->
+<!-- ===================================================
+ NAVIGATION
+==================================================== -->
+<header class="sticky top-0 bg-white shadow z-50">
+    <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
 
-<!-- HERO -->
-<section class="bg-green-700 text-white py-24 text-center">
-    <h2 class="text-4xl font-bold">Contact Us</h2>
-    <p class="text-green-100 mt-3">We are here to help you with printing solutions</p>
+        <!-- Logo -->
+        <a href="index.html" class="flex items-center space-x-3">
+            <div class="w-12 h-12 bg-blue-600 rounded-full flex items-center justify-center text-white text-xl font-bold">
+                SS
+            </div>
+            <div>
+                <h1 class="text-2xl font-bold">Shwet Shiva</h1>
+                <p class="text-sm text-gray-600 -mt-1">Printing Services</p>
+            </div>
+        </a>
+
+        <!-- Desktop Menu -->
+        <div class="hidden md:flex space-x-8 font-semibold">
+
+            <a href="index.html" class="hover:text-blue-600">Home</a>
+
+            <div class="relative group cursor-pointer">
+                <span class="text-blue-600">Products</span>
+                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-48 p-3 space-y-2">
+                    <a href="business-cards.html" class="block hover:text-blue-600">Business Cards</a>
+                    <a href="brochures.html" class="block hover:text-blue-600">Brochures</a>
+                    <a href="banners.html" class="block hover:text-blue-600">Banners</a>
+                    <a href="packaging.html" class="block hover:text-blue-600">Packaging</a>
+                    <a href="labels.html" class="block hover:text-blue-600">Labels</a>
+                </div>
+            </div>
+
+            <a href="services.html" class="hover:text-blue-600">Services</a>
+
+            <div class="relative group cursor-pointer">
+                <span class="hover:text-blue-600">Company</span>
+                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-40 p-3 space-y-2">
+                    <a href="about.html" class="block hover:text-blue-600">About Us</a>
+                    <a href="contact.html" class="block font-semibold text-blue-600">Contact</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Mobile Menu -->
+        <button id="mobileBtn" class="md:hidden text-3xl">&#9776;</button>
+    </nav>
+
+    <div id="mobileMenu" class="hidden md:hidden bg-white shadow px-4 pb-4">
+        <a href="index.html" class="block py-2">Home</a>
+
+        <details class="py-2">
+            <summary class="cursor-pointer font-medium text-blue-600">Products</summary>
+            <div class="pl-4 space-y-1">
+                <a href="business-cards.html">Business Cards</a>
+                <a href="brochures.html">Brochures</a>
+                <a href="banners.html">Banners</a>
+                <a href="packaging.html">Packaging</a>
+                <a href="labels.html">Labels</a>
+            </div>
+        </details>
+
+        <a href="services.html" class="block py-2">Services</a>
+
+        <details class="py-2">
+            <summary class="cursor-pointer font-medium">Company</summary>
+            <div class="pl-4 space-y-1">
+                <a href="about.html">About Us</a>
+                <a href="contact.html" class="font-semibold text-blue-600">Contact</a>
+            </div>
+        </details>
+    </div>
+</header>
+
+<script>
+document.getElementById("mobileBtn").onclick = () => {
+    document.getElementById("mobileMenu").classList.toggle("hidden");
+};
+</script>
+
+<!-- ===================================================
+ HERO
+==================================================== -->
+<section class="relative fade-in">
+    <img src="https://picsum.photos/1920/550?random=91"
+         class="w-full h-[420px] object-cover brightness-75">
+
+    <div class="absolute top-0 left-0 w-full h-full flex flex-col justify-center items-center text-white text-center px-6">
+        <h2 class="text-5xl font-extrabold drop-shadow-lg slide-up">Contact Us</h2>
+        <p class="mt-4 text-lg max-w-2xl slide-up">
+            We’re here to help with your printing inquiries, quotes, and custom orders.
+        </p>
+    </div>
 </section>
 
-<!-- CONTACT FORM -->
-<section class="container mx-auto px-4 py-16">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+<!-- ===================================================
+ CONTACT FORM + INFO
+==================================================== -->
+<section class="container mx-auto px-6 py-16">
+    <div class="grid md:grid-cols-2 gap-10">
 
-        <div class="bg-white p-8 shadow rounded-lg">
+        <!-- Form -->
+        <div class="bg-white p-8 rounded-xl shadow fade-in">
             <h3 class="text-2xl font-bold mb-6">Send a Message</h3>
 
             <form class="space-y-4">
-                <input type="text" placeholder="Your Name" class="w-full p-3 border rounded" />
-                <input type="email" placeholder="Email Address" class="w-full p-3 border rounded" />
-                <input type="text" placeholder="Phone Number" class="w-full p-3 border rounded" />
-                <textarea placeholder="Your Message" class="w-full p-3 border rounded h-32"></textarea>
-                <button class="w-full py-3 bg-green-700 text-white rounded-lg font-bold">
+                <input type="text" placeholder="Your Name" class="w-full p-3 border rounded" required>
+                <input type="email" placeholder="Email Address" class="w-full p-3 border rounded" required>
+                <input type="text" placeholder="Phone Number" class="w-full p-3 border rounded">
+                <textarea placeholder="Your Message" class="w-full p-3 border rounded h-32" required></textarea>
+                <button class="w-full py-3 bg-blue-600 text-white rounded-lg font-bold hover:bg-blue-700">
                     Submit
                 </button>
             </form>
         </div>
 
-        <div>
+        <!-- Contact Info -->
+        <div class="fade-in">
             <h3 class="text-2xl font-bold mb-4">Reach Us</h3>
-            <p class="text-gray-700"><strong>Address:</strong> 123 Printing Street, Mumbai</p>
-            <p class="text-gray-700 mt-2"><strong>Email:</strong> info@shwetshivaprinting.com</p>
+            <p class="text-gray-700"><strong>Address:</strong> 123 Printing Street, Mumbai, India</p>
+            <p class="text-gray-700 mt-2"><strong>Email:</strong> support@shwetshivaprinting.com</p>
             <p class="text-gray-700 mt-2"><strong>Phone:</strong> +91 98765 43210</p>
+            <p class="text-gray-700 mt-2"><strong>Business Hours:</strong> Mon–Sat, 9 AM – 6 PM</p>
         </div>
 
     </div>
 </section>
+
+<!-- ===================================================
+ CTA
+==================================================== -->
+<section class="bg-blue-600 text-white py-14 text-center slide-up">
+    <h3 class="text-3xl font-bold">Need Immediate Assistance?</h3>
+    <p class="mt-3 text-lg">Call or email us for urgent printing inquiries and quotes.</p>
+
+    <a href="tel:+919876543210"
+       class="mt-6 inline-block bg-white text-blue-700 px-8 py-3 rounded-lg font-bold shadow-md hover:bg-gray-200">
+       Call Now
+    </a>
+</section>
+
+<!-- ===================================================
+ FOOTER
+==================================================== -->
+<footer class="bg-gray-900 text-gray-300 py-10">
+    <div class="container mx-auto px-6 grid md:grid-cols-3 gap-10">
+
+        <div>
+            <h4 class="text-xl font-bold mb-3">Shwet Shiva Printing</h4>
+            <p>Premium printing services with fast delivery & top quality.</p>
+        </div>
+
+        <div>
+            <h4 class="text-xl font-bold mb-3">Products</h4>
+            <ul class="space-y-1">
+                <li><a href="business-cards.html" class="hover:text-white">Business Cards</a></li>
+                <li><a href="brochures.html" class="hover:text-white">Brochures</a></li>
+                <li><a href="banners.html" class="hover:text-white">Banners</a></li>
+                <li><a href="packaging.html" class="hover:text-white">Packaging</a></li>
+                <li><a href="labels.html" class="hover:text-white">Labels</a></li>
+            </ul>
+        </div>
+
+        <div>
+            <h4 class="text-xl font-bold mb-3">Contact</h4>
+            <p>Email: support@shwetshivaprinting.com</p>
+            <p>Phone: +91 98765 43210</p>
+        </div>
+
+    </div>
+</footer>
 
 </body>
 </html>
