--- a/contact.html
+++ b/contact.html
@@ -161,9 +161,9 @@ document.getElementById("mobileBtn").onclick = () => {
         <!-- Contact Info -->
         <div class="fade-in">
             <h3 class="text-2xl font-bold mb-4">Reach Us</h3>
-            <p class="text-gray-700"><strong>Address:</strong> 123 Printing Street, Mumbai, India</p>
-            <p class="text-gray-700 mt-2"><strong>Email:</strong> support@shwetshivaprinting.com</p>
-            <p class="text-gray-700 mt-2"><strong>Phone:</strong> +91 98765 43210</p>
+            <p class="text-gray-700"><strong>Address:</strong> Randive galli,Purw, Kasaba Bawada, Kolhapur, Maharashtra 416006</p>
+            <p class="text-gray-700 mt-2"><strong>Email:</strong> infoshwetshivaprinting@gmail.com</p>
+            <p class="text-gray-700 mt-2"><strong>Phone:</strong> +91 80872 20081</p>
             <p class="text-gray-700 mt-2"><strong>Business Hours:</strong> Mon–Sat, 9 AM – 6 PM</p>
         </div>
 
@@ -207,8 +207,8 @@ document.getElementById("mobileBtn").onclick = () => {
 
         <div>
             <h4 class="text-xl font-bold mb-3">Contact</h4>
-            <p>Email: support@shwetshivaprinting.com</p>
-            <p>Phone: +91 98765 43210</p>
+            <p>Email: infoshwetshivaprinting@gmail.com</p>
+            <p>Phone: +91 80872 20081</p>
         </div>
 
     </div>
